# Life-line

./: .gitignore  agents.md  build_dmg.sh  gemini.md  install.sh  readme.md  run.sh
ai_models/audio_models/: README.md
ai_models/base_models/: README.md
ai_models/loras/: README.md  dataset_config.toml  prepare_dataset.py  style_analysis.md  test_generation.py
ai_models/loras/output/: Lifeline.safetensors
api_audio_python/: main.py  requirements.txt
api_vision_python/: diffvg_torch.py  main.py  requirements.txt  vector_optimizer.py  vector_requirements.txt
app_macos/: AppIcon.icns  Package.swift
app_macos/Sources/LifeLine/: ContentView.swift  GenerationService.swift  LifeLineApp.swift  Models.swift  PythonBackend.swift
app_macos/Tests/LifeLineTests/: ModelsTests.swift
docker/: Dockerfile.audio  Dockerfile.rust  Dockerfile.vision  docker-compose.yml  run_training_mac.sh  train_lora.sh
engine_rust/: Cargo.toml
engine_rust/assets/shaders/: compute_particles.wgsl  render_particles.wgsl
engine_rust/src/: ai_client.rs  audio_system.rs  interaction.rs  main.rs  render_system.rs
